Customize project for Scala and Java performance comparisons